--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"devDependencies": {
-		"react-native-scripts": "1.11.1",
-		"jest-expo": "25.0.0",
-		"react-test-renderer": "16.2.0",
 		"babel-eslint": "7",
 		"eslint": "^4.18.2",
-		"eslint-plugin-react": "^7.7.0"
+		"eslint-plugin-react": "^7.7.0",
+		"jest-expo": "25.0.0",
+		"react-native-scripts": "1.11.1",
+		"react-test-renderer": "16.2.0"
 	},
 	"main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
 	"scripts": {
@@ -24,6 +24,8 @@
 	"dependencies": {
 		"expo": "^25.0.0",
 		"react": "16.2.0",
-		"react-native": "0.52.0"
+		"react-native": "0.52.0",
+		"react-navigation": "^1.4.0",
+		"styled-components": "^3.2.0"
 	}
 }
