--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"react": "16.2.0",
 		"react-native": "0.52.0",
 		"react-navigation": "^1.4.0",
+		"react-redux": "^5.0.7",
+		"redux": "^3.7.2",
 		"styled-components": "^3.2.0"
 	}
 }
