--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"expo": "^25.0.0",
 		"react": "16.2.0",
 		"react-native": "0.52.0",
+		"react-native-fab": "^1.0.6",
 		"react-navigation": "^1.4.0",
 		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
