--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react-navigation": "^1.4.0",
 		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
+		"redux-form": "^7.3.0",
 		"styled-components": "^3.2.0"
 	}
 }
