--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "UdaciCards",
+	"name": "udaci-cards",
 	"version": "0.1.0",
 	"private": true,
 	"devDependencies": {
@@ -32,6 +32,7 @@
 		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
 		"redux-form": "^7.3.0",
+		"redux-persist": "^5.9.1",
 		"styled-components": "^3.2.0"
 	}
 }
