--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-native": "0.52.0",
 		"react-native-debugger-open": "^0.3.17",
 		"react-native-fab": "^1.0.6",
+		"react-native-uuid": "^1.4.9",
 		"react-navigation": "^1.4.0",
 		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
