--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"expo": "^25.0.0",
+		"moment": "^2.21.0",
 		"pluralize": "^7.0.0",
 		"react": "16.2.0",
 		"react-native": "0.52.0",
